# webquery

./: CMakeLists.txt  Makefile  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
cmake/: lexborConfig.cmake  lexborConfigVersion.cmake
src/: webquery_extension.cpp
src/include/: webquery_extension.hpp
